# ibex-lib

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  filib_CMakeLists.txt.in  filib_config.h.in  soplex_CMakeLists.txt.in
src/: CMakeLists.txt  ibex_Setting.h.in
src/combinatorial/: ibex_QInter.cpp
src/function/: ibex_FunctionBuild.cpp_
src/parser/: generated_lexer.cpp_  generated_parser.cpp_  generated_parser.hpp_  ibex_Scope.cpp  lexer.l
src/set/: ibex_SepBoundaryCtc.cpp  ibex_SetVisitor.h
src/tools/: ibex_String.cpp
tests/: CMakeLists.txt  TestArith.cpp  TestCtcExist.cpp  TestCtcForAll.cpp  TestFunction.cpp  TestFunction.h  TestLPSolver.cpp  TestParser.cpp  TestSolver.cpp  TestSystem.cpp  TestTimer.cpp
